Add simple react and deploy script.
Add deploy script.

Add environment variable.

Fix public read.

--- a/web/style.less
+++ b/web/style.less
@@ -1,7 +1,13 @@
 body {
-
+    padding-top: 10px;
 }
 
-#new-comment-container {
-    padding-top: 10px;
+.text-right {
+    text-align: right;
+}
+#comment-list-wrapper {
+    blockquote {
+        margin-top: 3px;
+        margin-bottom: 0;
+    }
 }
